--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,15 +6,22 @@
   </div>
 </div>
 <div class="card px-3 mx-auto" style="width: 18rem;" >
-  <form>
+  <form  [formGroup]="loginForm" (submit)="doLogin()">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Username</label>
+    
+      <input type="email"  #userNameInput class="form-control"  formControlName="username" name="username" autofocus aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" *ngIf="loginForm.get('username').errors?.required"class="form-text text-danger">Username is required.</small>
+    </div>
+
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <input type="password"  #usePasswordInput  class="form-control"  formControlName="password" name="password" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-danger" *ngIf="loginForm.get('password').errors?.required">Password is required.</small>
     </div>
     
     
-    <button type="button" (click)="doLogin()" class="btn btn-primary">Submit</button>
+    <button type="submit"[disabled]="loginForm.invalid"   class="btn btn-primary">Submit</button>
   </form>
   
 </div>
