--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,10 +8,10 @@
 <div class="card px-3 mx-auto" style="width: 18rem;" >
   <form  [formGroup]="loginForm" (submit)="doLogin()">
     <div class="form-group">
-      <label for="exampleInputEmail1">Username</label>
+      <label for="exampleInputEmail1">Email</label>
     
-      <input type="email"  #userNameInput class="form-control"  formControlName="username" name="username" autofocus aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" *ngIf="loginForm.get('username').errors?.required"class="form-text text-danger">Username is required.</small>
+      <input type="email"  #emailInput class="form-control"  formControlName="email" name="email" autofocus aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" *ngIf="loginForm.get('email').errors?.required"class="form-text text-danger">Email is required.</small>
     </div>
 
     <div class="form-group">
@@ -22,6 +22,7 @@
     
     
     <button type="submit"[disabled]="loginForm.invalid"   class="btn btn-primary">Submit</button>
+    <!-- <a href="" class="btn btn-primary">GitHub</a> -->
   </form>
   
 </div>
