some things and get repos

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,14 +14,9 @@
       <small id="emailHelp" *ngIf="loginForm.get('email').errors?.required"class="form-text text-danger">Email is required.</small>
     </div>
 
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="password"  #usePasswordInput  class="form-control"  formControlName="password" name="password" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-danger" *ngIf="loginForm.get('password').errors?.required">Password is required.</small>
-    </div>
     
     
-    <button type="submit"[disabled]="loginForm.invalid"   class="btn btn-primary">Submit</button>
+    <button type="submit"[disabled]="loginForm.invalid"   class="btn btn-primary">Login</button>
     <!-- <a href="" class="btn btn-primary">GitHub</a> -->
   </form>
   
