--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -30,4 +30,6 @@
     </li>    
   </ul>
 
+  <button type="button" class="btn btn-info  btn-lg btn-block" (click)="loadMore()" *ngIf="isMore"> load more</button>
+
 
