--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+<div class="container" *ngIf="!loading">
     <div class="row justify-content-center align-items-center login" >
         <div class="col  col-12 col-sm-12 col-md-8 col-lg-8">
             <div class="card">
@@ -29,33 +29,22 @@
     </div>
 </div>
 
+<div class="container" *ngIf="loading">
+        <div class="row justify-content-center align-items-center login" >
+            <div class="col  col-12 col-sm-12 col-md-8 col-lg-8">
+                <div class="card">
+    
+                  <div class="card-header text-center">
+                      <img class="mb-4" src="../../assets/imgs/github-logo.png" alt="" width="72" height="72">
+                      <h5 class="mb-3 font-weight-normal">Loading...</h5> 
+    
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
 
 <!-- https://paty-angular-github.herokuapp.com/ -->
 
-
-<!-- <div class="" >  -->
-  
-  <!-- <form  [formGroup]="loginForm" (submit)="doLogin()" class="form-signin card p-3">
-
-
-      <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> -->
-
-<!-- 
-      <label for="inputEmail" class="sr-only">Email ou Username</label>
-      <input type="email"  #emailInput class="form-control" formControlName="email" name="email" autofocus aria-describedby="emailHelp" placeholder="Enter email or username">
-      <small id="emailHelp" *ngIf="loginForm.get('email').errors?.required"class="form-text text-danger">Email is required.</small> -->
-    
-      <!-- <label for="exampleInputEmail1">Email</label> -->
-    
-      <!-- <input type="email"  #emailInput class="form-control"  formControlName="email" name="email" autofocus aria-describedby="emailHelp" placeholder="Enter email"> -->
-      <!-- <small id="emailHelp" *ngIf="loginForm.get('email').errors?.required"class="form-text text-danger">Email is required.</small> -->
-   
-      
-<!-- 
-    <button type="submit"[disabled]="loginForm.invalid"   class="btn btn-primary">Login</button>
-  </form> -->
-
-  
-<!-- </div> -->
-  
