fix other things forks/stars

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -25,7 +25,8 @@
         <h5 class="mt-0 mb-1">{{repo.name}}</h5>
         <p><small>{{repo.language}}</small><br/>
         Description: {{repo.description}}<br/>
-         forks 2  stars 2</p>
+         forks:  <span class="badge badge-pill badge-info">{{repo.forks_count}}  </span> 
+         stars:  <span class="badge badge-pill badge-info">{{repo.stargazers_count}}</span>  </p>
       </div>
     </li>    
   </ul>
